--- a/VueApp/css/styles.css
+++ b/VueApp/css/styles.css
@@ -54,3 +54,13 @@ body{
   text-decoration: line-through;
   color: #bbb;
 }
+
+.info{
+  color: #bbb;
+  font-size: 12px;
+  font-weight: normal;
+}
+
+h1 button{
+  float: right;
+}
