--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,8 @@
+ul{
+  list-style: none;
+  padding: 0;
+}
+
 .to_vue_app{
   display: block;
   height: 30px;
@@ -12,6 +17,25 @@
 }
 
 .to_vue_app:hover{
+  opacity: .8;
+  text-decoration: none;
+  color: black;
+}
+
+.to_angular_app{
+  display: block;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  border: 1px solid black;
+  border-radius: 5px;
+  background-color: gray;
+  color: black;
+  text-decoration: none;
+  margin: 10px;
+}
+
+.to_angular_app:hover{
   opacity: .8;
   text-decoration: none;
   color: black;
